refactor: resolve non-enterprise SonarQube warnings